--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <div class="container">
         <h1>My First Website</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur tempore recusandae, earum dolorem at totam quae commodi doloribus repudiandae numquam eveniet cum pariatur eligendi voluptatum aut obcaecati dolores vitae blanditiis.</p>
+        <p>Lorem ipsum dolor sit, thesenuts
+             consectetur adipisicing elit. Tenetur tempore recusandae, earum dolorem at totam quae commodi doloribus repudiandae numquam eveniet cum pariatur eligendi voluptatum aut obcaecati dolores vitae blanditiis.</p>
     </div>
 </body>
 </html>
