--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
         <p>Lorem ipsum dolor sit, thesenuts
              consectetur adipisicing elit. Tenetur tempore recusandae, earum dolorem at totam quae commodi doloribus repudiandae numquam eveniet cum pariatur eligendi voluptatum aut obcaecati dolores vitae blanditiis.</p>
     </div>
+    <div class="unordered">
+        <h3>My lists</h3>
+        <ul>
+            <li>Thunderbolts</li>
+            <li>Daredevil Born Again</li>
+            <li>Invincible</li>
+            <li>Bloodhounds</li>
+            <li>Weak Hero Class</li>
+        </ul>
+    </div>
 </body>
 </html>
