--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div class="table">
         <table>
             <thead>
-                <tr rowspan="4">my schedule for 3rd term</tr>
+                <tr colspan="4">
+                    <th>my schedule for 3rd term</tr>
                 <tr>
                     <th>Day</th>
                     <th>Time</th>
