--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>my schedule for 3rd term</tr>
+                    <th>my schedule for 3rd term</th>
                 </tr>
                 <tr>
                     <th>Day</th>
