--- a/index.html
+++ b/index.html
@@ -1,73 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Website</title>
+<title>Page Title</title>
 </head>
 <body>
-    <div class="container">
-        <h1>My First Website</h1>
-        <p>Lorem ipsum dolor sit, thesenuts
-             consectetur adipisicing elit. Tenetur tempore recusandae, earum dolorem at totam quae commodi doloribus repudiandae numquam eveniet cum pariatur eligendi voluptatum aut obcaecati dolores vitae blanditiis.</p>
-    </div>
-    <div class="unordered">
-        <h3>My lists</h3>
-        <ul>
-            <li>Thunderbolts</li>
-            <li>Daredevil Born Again</li>
-            <li>Invincible</li>
-            <li>Bloodhounds</li>
-            <li>Weak Hero Class</li>
-        </ul>
-    </div>
-    <div class="description">
-        <d1>
-            <dt>test</dt>
-            <dd>test</dd>
-        </d1>
-    </div>
-    <div class="table">
-        <table>
-            <thead>
-                <tr>
-                    <th colspan = "4">My schedule for  this term</th>
-                </tr>
-                <tr>
-                    <th>Day</th>
-                    <th>Time</th>
-                    <th>Course</th>
-                    <th>Room</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Monday</td>
-                    <td>7:00 - 8:50</td>
-                    <td>IT0079</td>
-                    <td>F1101</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
