--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<h1>My Professional Resume</h1>
+<p>Hi! I'm Reyj II B Naluan</p>
+<p> I'm an AGD student from FEU Tech</p>
 </body>
 </html>
