--- a/index.html
+++ b/index.html
@@ -9,4 +9,26 @@
 <p>Hi! I'm Reyj II B Naluan</p>
 <p> I'm an AGD student from FEU Tech</p>
 </body>
+<div class="unordered">
+    <h3>My Qualifications</h3>
+    <ol type="">
+        <li> Jobs
+            <ul>
+                <li>Former Animator</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </li>
+        <li>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </li>
+    </ol>
+</div>
+</div>
 </html>
