--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <p>Hi! I'm Reyj II B Naluan</p>
 <p> I'm an AGD student from FEU Tech</p>
 </body>
+
+<img alt="Image.jfif" alt="FEU student">
+
 <div class="unordered">
     <h3>My Qualifications</h3>
     <ol type="">
@@ -31,4 +34,5 @@
     </ol>
 </div>
 </div>
+
 </html>
