--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p> I'm an AGD student from FEU Tech</p>
 </body>
 
-<img alt="Image.jfif" alt="FEU student">
+<img src="Image.jfif" alt="FEU student" width="400" height ="500">
 
 <div class="unordered">
     <h3>My Qualifications</h3>
