--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p> I'm an AGD student from FEU Tech</p>
 </body>
 
-<img src="Image.jfif" alt="FEU student" width="400" height ="500">
+<img src="468321156_1104226001703983_7039059389592064912_n.jpg" alt="FEU student" width="400" height ="500">
 
 <div class="unordered">
     <h3>My Qualifications</h3>
