--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <ol type="">
         <li> Jobs
             <ul>
-                <li>Former Animator</li>
-                <li></li>
+                <li>Former animator for epic games</li>
+                <li>Animator for Marvel Films</li>
                 <li></li>
                 <li></li>
                 <li></li>
