--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>My Professional Resume</h1>
 <p>Hi! I'm Reyj II B Naluan</p>
-<p> I'm an AGD student from FEU Tech test</p>
+<p> I'm an AGD student from FEU Tech </p>
 </body>
 
 <img src="468321156_1104226001703983_7039059389592064912_n.jpg" alt="FEU student" width="400" height ="500">
