--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li>Former animator for epic games</li>
                 <li>Animator for Marvel Films</li>
-                <li></li>
+                <li>test</li>
                 <li></li>
                 <li></li>
             </ul>
