--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
 <div class="unordered">
     <h3>My Qualifications</h3>
-    <ol type="">
+    <ol type="I">
         <li> Jobs
             <ul>
                 <li>Former animator for epic games</li>
                 <li>Animator for Marvel Films</li>
-                <li>test</li>
+                <li></li>
                 <li></li>
                 <li></li>
             </ul>
         </li>
-        <li>
+        <li> Education
             <ul>
                 <li></li>
                 <li></li>
