--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
             <ul>
                 <li>Former animator for epic games</li>
                 <li>Animator for Marvel Films</li>
-                <li></li>
-                <li></li>
-                <li></li>
             </ul>
         </li>
-        <li> 
+        <li> Education
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>FEUTech</li>
+                <li>Gardner College</li>
+                <li>San Francisco Highschool</li>
             </ul>
         </li>
     </ol>
