--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/Icons/user-square.svg" >
 </head>
 <body>
+    <div class="container">
+        <h1>
+            Stuff
+        </h1>
+        <p>
+            Formatives:
+        </p>
+        <a href="">
+            <button class="btn" type="button">
+                Formative 2
+            </button>
+        </a>
+        <a href="login">
+            <button class="btn" type="button">
+                Login Page
+            </button>
+        </a>
 
-<h1>My Professional Resume</h1>
-<p>Hi! I'm Reyj II B Naluan</p>
-<p> I'm an AGD student from FEU Tech </p>
+        <a href="table">
+            <button class="btn" type="button">
+                Table
+            </button>
+        </a>
+        
+    </div>
 </body>
-
-<img src="468321156_1104226001703983_7039059389592064912_n.jpg" alt="FEU student" width="400" height ="500">
-
-<div class="unordered">
-    <h3>My Qualifications</h3>
-    <ol type="I">
-        <li> Jobs
-            <ul>
-                <li>Former animator for epic games</li>
-                <li>Animator for Marvel Films</li>
-            </ul>
-        </li>
-        <li> Education
-            <ul>
-                <li>FEUTech</li>
-                <li>Gardner College</li>
-                <li>San Francisco Highschool</li>
-            </ul>
-        </li>
-    </ol>
-</div>
-</div>
-
 </html>
