--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
             Formatives:
         </p>
-        <a href="">
+        <a href="f2 formative/index.html">
             <button class="btn" type="button">
                 Formative 2
             </button>
@@ -26,7 +26,7 @@
             </button>
         </a>
 
-        <a href="table">
+        <a href="table folder/table">
             <button class="btn" type="button">
                 Table
             </button>
