--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 Formative 2
             </button>
         </a>
-        <a href="login page/login">
+        <a href="login page/index.html">
             <button class="btn" type="button">
                 Login Page
             </button>
