--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </button>
         </a>
 
-        <a href="table folder/table">
+        <a href="table folder/index.html">
             <button class="btn" type="button">
                 Table
             </button>
