--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/Icons/user-square.svg" >
 </head>
 <body>
@@ -19,7 +19,7 @@
             <button class="btn" type="button">
                 Formative 2
             </button>
-        </a>
+        </a> 
         <a href="login page/index.html">
             <button class="btn" type="button">
                 Login Page
@@ -32,6 +32,7 @@
             </button>
         </a>
         
+       
     </div>
 </body>
 </html>
