--- a/table folder/index.html
+++ b/table folder/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
-    <link rel="stylesheet" href="stylesheet">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <table>
@@ -26,7 +26,7 @@
             <td rowspan="10" class="yellow_background">KSK</td>
             <td rowspan="2">5/14/2019</td>
             <td rowspan="10" class="center_items">
-                <img src="/S1-Summative/Table/BoyBawang.png" alt="A pic of Boy Bawang">
+                <img src="Boy_Bawang_Cornicks_Family_Pack_Garlic-1.png" alt="A pic of Boy Bawang">
             </td>
         </tr>
         <tr>
@@ -69,5 +69,8 @@
         </tr>
 
     </table>
+    <a href="\index.html">
+        <button type="button">Return to main area</button>
+    </a>
 </body>
 </html>
