--- a/f2 formative/index.html
+++ b/f2 formative/index.html
@@ -66,4 +66,7 @@
         </ul>
     </div>
 </body>
+<a href="\index.html">
+        <button type="button">Return to main area</button>
+    </a>
 </html>
