--- a/login page/index.html
+++ b/login page/index.html
@@ -21,4 +21,13 @@
         <input type="submit" value="Send"></input>
     </form>
 </body>
+
+<div>
+    <a href="\index.html">
+        <button type="button">Return to main area</button>
+    </a>
+
+
+
+</div>
 </html>
