--- a/FEUTech website/index.html
+++ b/FEUTech website/index.html
@@ -9,7 +9,7 @@
 <ul>
   <li><a href="enrollment.html">Enrollment</a></li>
   <li><a href="">Other Services</a></li>
-  <li><a href="">Guides and Manuals</a></li>
+  <li><a href="">User Guides and Manuals</a></li>
   
 </ul>
 
