--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </p>
         <a href="f2 formative/index.html">
             <button class="btn" type="button">
-                Formative 2
+                Formative 2.
             </button>
         </a> 
         <a href="login page/index.html">
