--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             F4 Formative
         </button>
        </a>
+
+       <a href="Summative 2/index.html"></a>
+       <button class="btn" type="button">
+            Summative 2
+        </button>
     </div>
 </body>
 </html>
