--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
         </button>
        </a>
 
-       <a href="Summative 2/index.html"></a>
+       <a href="Summative 2/index.html">
        <button class="btn" type="button">
             Summative 2
         </button>
+        </a>
     </div>
 </body>
 </html>
