--- a/Summative 2/index.html
+++ b/Summative 2/index.html
@@ -19,7 +19,7 @@
       line-height: 1.6;
     }
     a {
-      color: #007acc;
+      color:#272727;
       text-decoration: none;
     }
     a:hover {
@@ -39,7 +39,7 @@
    
     header {
       text-align: center;
-      border-bottom: 2px solid #007acc;
+      border-bottom: 2px solid #272727;
       padding-bottom: 15px;
       margin-bottom: 25px;
     }
@@ -48,7 +48,7 @@
       font-weight: 700;
       font-size: 2.8rem;
       letter-spacing: 1px;
-      color: #007acc;
+      color: #272727;
     }
     header p {
       margin: 6px 0 0;
@@ -70,9 +70,9 @@
     h2.section-title {
       font-size: 1.8rem;
       margin-bottom: 15px;
-      border-bottom: 2px solid #007acc;
+      border-bottom: 2px solid #272727;
       padding-bottom: 5px;
-      color: #007acc;
+      color: #272727;
       letter-spacing: 0.5px;
     }
 
@@ -97,7 +97,7 @@
       border-radius: 20px;
       padding: 8px 16px;
       font-weight: 600;
-      color: #007acc;
+      color: #272727;
       font-size: 0.9rem;
     }
 
@@ -119,7 +119,7 @@
     .experience-item .position, .education-item .degree {
       margin: 5px 0 10px;
       font-weight: 600;
-      color: #007acc;
+      color: #272727;
     }
     .experience-item p, .education-item p {
       margin: 4px 0 0;
@@ -138,7 +138,7 @@
     }
     .projects li a {
       font-weight: 600;
-      color: #007acc;
+      color: #272727;
     }
 
   
