--- a/F4 Formative/index.html
+++ b/F4 Formative/index.html
@@ -9,9 +9,7 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <div class ="center">
-    <center> <font size = "+3">EMPLOYMENT REGISTRATION FORM</font>
-
-    </center>
+    EMPLOYMENT REGISTRATION FORM
 </div>
 <br>
 
