--- a/f2 formative/index.html
+++ b/f2 formative/index.html
@@ -46,7 +46,7 @@
                 <ul>
                     <li>GTA 6</li>
                     <li>Red Dead Redemption 2</li>
-                    <li>Marvel Rivals</li>
+                    <li>Marvel Rivals I added this</li>
                 </ul>  
             </li>
             <li>
