--- a/F5 Formative/Dustin_external.html
+++ b/F5 Formative/Dustin_external.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+<img src="Image (1).jfif" alt="Dustin">
+    <h1 class="intro"> This is Dustin</h1>
+
+    <div class="container">
+        <h2> These are his favorite things</h2>
+        <ul>
+            <li> Me just like everyone else</li>
+            <li> His job</li>
+            <li> his Girlfriend and Stocks</li>
+        </ul>
+
+        <h1>My favorite memories with him</h1>
+        <ul>
+            <li> NSTP Immersions</li>
+            <li> Us jamming at my house when I got my new piano</li>
+            <li> Going to his house and drinking</li>
+        </ul>
+    </div>
     
 </body>
 </html>
