--- a/project/index.html
+++ b/project/index.html
@@ -10,22 +10,23 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://images.pokemongo.com/web/pokemon-go/static/images/pokemon-go-logo.png" alt="Pokémon GO Logo">
+            <img src="pokemon-go-seeklogo.png" alt="Pokémon GO Logo">
         </div>
         
         <nav>
             <ul>
+                <li><a href="#">Go Fest</a></li>
                 <li><a href="#">News</a></li>
+                <li><a href="#">Seasons</a></li>
                 <li><a href="#">Events</a></li>
-                <li><a href="#">Pokédex</a></li>
                 <li><a href="#">Community</a></li>
+                <li><a href="#">Leaderboard</a></li>
                 <li><a href="#">Shop</a></li>
             </ul>
         </nav>
         
         <div class="header-buttons">
-            <button class="header-btn download-btn">Download</button>
-            <button class="header-btn play-btn">Play Now</button>
+            <button class="header-btn play-btn">Sign In</button>
         </div>
     </header>
 
