--- a/project/index.html
+++ b/project/index.html
@@ -6,11 +6,13 @@
     <title>POTATOCORNER</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tungsten:wght@700&family=DINNextW05-Medium&display=swap">
     <link rel="stylesheet" href="indexstyle.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="pokemon-go-seeklogo.png" alt="Pokémon GO Logo">
+       <header class="container-fluid"> 
+        <div class="row align-items-center"> 
+            <div class="logo col-md-2">
+                <img src="pokemon-go-seeklogo.png" alt="Pokémon GO Logo">
         </div>
         
         <nav>
