I forgot what I did lowkey, just focus on doing the footer tomorrow

--- a/project/index.html
+++ b/project/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POTATOCORNER</title>
@@ -12,7 +13,9 @@
        <header class="container-fluid"> 
         <div class="row align-items-center"> 
             <div class="logo col-md-2">
-                <img src="pokemon-go-seeklogo.png" alt="Pokémon GO Logo">
+               <a href="index.html">
+                <img src="pokemon-go-seeklogo.png" alt="pokemon-go-seeklogo">
+               </a>
         </div>
         
         <nav>
@@ -31,6 +34,13 @@
             <button class="header-btn play-btn">Sign In</button>
         </div>
     </header>
+
+
+    <div>
+        <section>
+
+        </section>
+    </div>
 
 </body>
 </html>
