--- a/project/index.html
+++ b/project/index.html
@@ -42,5 +42,35 @@
         </section>
     </div>
 
+    <div>
+        <!-- Footer -->
+<footer class="bg-light text-center ">
+  <!-- Grid container -->
+  <div class="container p-4">
+
+
+
+    <!-- Section: Text -->
+    <section class="mb-4">
+      <p>
+      Though this website exists as to be a recreation of the pre-existing Pokemon Go website made by Niantic Company and owned by Nintendo, I as a student do not take or claim any copyrighted material. This is an entirely academic project which holds no validity or connection towards the creators and copyright owners of Pokemon Go.
+      </p>
+    </section>
+    <!-- Section: Text -->
+
+
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 2020 Copyright:
+    <a class="text-dark" href="https://mdbootstrap.com/">Niantic Company </a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+    </div>
 </body>
 </html>
