--- a/project/index.html
+++ b/project/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+  <div class="content-wrapper">
        <header class="container-fluid"> 
         <div class="row align-items-center"> 
             <div class="logo col-md-2">
@@ -42,34 +43,36 @@
     </div>
 
     <div>
-        <!-- Footer -->
+    
 <footer class="bg-light text-center ">
-  <!-- Grid container -->
+
   <div class="container p-4">
 
 
 
-    <!-- Section: Text -->
+
     <section class="mb-4">
       <p>
       Though this website exists as to be a recreation of the pre-existing Pokemon Go website made by Niantic Company and owned by Nintendo, I as a student do not take or claim any copyrighted material. This is an entirely academic project which holds no validity or connection towards the creators and copyright owners of Pokemon Go.
       </p>
     </section>
-    <!-- Section: Text -->
-
+   
 
   </div>
-  <!-- Grid container -->
 
-  <!-- Copyright -->
+
+
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © 2020 Copyright:
     <a class="text-dark" href="https://mdbootstrap.com/">Niantic Company </a>
   </div>
-  <!-- Copyright -->
+
 
 </footer>
-<!-- Footer -->
+
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
