--- a/project/events.html
+++ b/project/events.html
@@ -14,7 +14,7 @@
             <div class="row align-items-center"> 
                 <div class="logo col-md-2">
                    <a href="index.html">
-                    <img src="pokemon-go-seeklogo.png" alt="pokemon-go-seeklogo">
+                    <img src="assets/pokemon-go-seeklogo.png" alt="pokemon-go-seeklogo">
                    </a>
                 </div>
                 
