--- a/project/shop.html
+++ b/project/shop.html
@@ -28,10 +28,10 @@
                 
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="https://pokemongo.com/en/gofest/osaka" target="_blank">Osaka</a>
+                <a class="dropdown-item" href="https://pokemongo.com/en/gofest/jersey-city" target="_blank">Jersey City</a>
+                <a class="dropdown-item" href="https://pokemongo.com/en/gofest/paris" target="_blank">Paris</a>
+                <a class="dropdown-item" href="https://pokemongo.com/en/gofest/global" target="_blank">Global</a>
               </div>
             </li>
             <li class="nav-item active">
