--- a/project/events.html
+++ b/project/events.html
@@ -69,11 +69,12 @@
 <div class="d-flex justify-content-center align-items-center" style="min-height: 40vh;">
   <h2 class="text-center">CHECK BACK SOON FOR MORE DETAILS</h2>
 </div>
-
-        <div>
+<hr>
+        <div class="text-center">
+          <img src="assets/pkm-azurill-sad-512x512.png" alt="sad pokemon" class="img-fluid" style="justify-content: center;">
       </div>
 
-      <hr>
+      
       
       <footer class="bg-body-tertiary text-center text-lg-start">
         <!-- Copyright -->
