--- a/project/index.html
+++ b/project/index.html
@@ -129,17 +129,17 @@
       <div class="container my-5">
         <div class="row align-items-center">
           <!-- Left: Text and Icon -->
-          <div class="col-md-6 text-center text-md-left py-5" style="background: #204080; color: white; border-radius: 50px 0 0 20px;">
-            <img src="assets/aa.png" alt="Pokeball" style="width: 70px; margin-bottom: 20px;">
-            <h2 class="font-weight-bold" style="text-align: center;">Catch Pokémon</h2>
-            <h3 style="text-align: center;">Find your buddy!</h3>
-            <p style="max-width: 350px; margin: 0 auto; justify-content: center;">
+          <div class="col-md-6 text-center text-md-left py-5" style="color: rgb(0, 0, 0);">
+            <img src="assets/aa.png" alt="Pokeball" style="width: 80px; margin-bottom: 30px;">
+            <h2 class="font-weight-bold display-4" style="text-align: center;">Catch Pokémon</h2>
+            <h3 class="mb-4" style="text-align: center; font-size: 2rem;">Find your buddy!</h3>
+            <p style="max-width: 400px; margin: 0 auto; font-size: 1.3rem;">
               Catching Pokémon is one way to collect them! You can also collect them by hatching Eggs and trading with other Trainers.
             </p>
           </div>
           <!-- Right: Image -->
-          <div class="col-md-6 text-center py-5" style="background: #e6f0ff; border-radius: 0 10px 10px 0;">
-            <img src="assets/maxresdefault (1).jpg" alt="AR Pokemon Demo" class="img-fluid" style="max-width: 440px; border-radius: 10px;">
+          <div class="col-md-6 text-center py-5">
+            <img src="assets/maxresdefault (1).jpg" alt="AR Pokemon Demo" class="img-fluid" style="max-width: 100%; border-radius: 20px; height: 450px; object-fit: cover; border-radius: 20px;">
           </div>
         </div>
       </div>
