--- a/project/login-page.html
+++ b/project/login-page.html
@@ -39,7 +39,7 @@ border-bottom-right-radius: .3rem;
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+   <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <a class="navbar-brand mx-4" href="index.html">
             <img src="assets/pokemon-go-seeklogo.png" width="150" height="90" alt="pokemon-go-logo">
         </a>
@@ -72,18 +72,22 @@ border-bottom-right-radius: .3rem;
               <li class="nav-item active">
                 <a class="nav-link mx-4" href="community.html" style="font-size: 30px;">Community<span class="sr-only">(current)</span></a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link mx-4" href="aboutpage.html" style="font-size: 30px;">About Us<span class="sr-only">(current)</span></a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-white"  href="#" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 30px;">
                 Shop
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownShop">
-                  <a class="dropdown-item" href="#" style="font-size: 20px;">Web Store</a>
-                  <a class="dropdown-item" href="#" style="font-size: 20px;">Event Ticketing</a>
-                  <a class="dropdown-item" href="#" style="font-size: 20px;">Code Redemption</a>
+                 <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Web Store</a>
+                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Event Ticketing</a>
+                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Code Redemption</a>
                 </div>
               </li>
           </ul>
         </div>
+    
        <form action="form-inline"> 
         <a class="btn btn-outline-primary btn-lg my-2 my-sm-0" href="login-page.html">Sign In</a>
        </form>
@@ -189,13 +193,21 @@ document.getElementById('registerForm').addEventListener('submit', function(even
         
         </script>
 
-<footer class="bg-body-tertiary text-center text-lg-start">
-    <!-- Copyright -->
-    <div class="text-center p-3 fixed-bottom " style="background-color: #c5c5c5;">
-      © 2020 Copyright:
-      <a class="text-body" href="https://pokemongo.com/en">Pokemon Go</a>
+ <footer class="bg-body-tertiary text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3 fixed-bottom " style="background-color: #c5c5c5;">
+          © 2020 Copyright:
+          <a class="text-body" href="https://pokemongo.com/en">Pokemon Go</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+
     </div>
-    <!-- Copyright -->
-  </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
