--- a/project/seasons.html
+++ b/project/seasons.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+   <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <a class="navbar-brand mx-4" href="index.html">
             <img src="assets/pokemon-go-seeklogo.png" width="150" height="90" alt="pokemon-go-logo">
         </a>
@@ -46,14 +46,17 @@
               <li class="nav-item active">
                 <a class="nav-link mx-4" href="community.html" style="font-size: 30px;">Community<span class="sr-only">(current)</span></a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link mx-4" href="aboutpage.html" style="font-size: 30px;">About Us<span class="sr-only">(current)</span></a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-white"  href="#" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 30px;">
                 Shop
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownShop">
-                  <a class="dropdown-item" href="#" style="font-size: 20px;">Web Store</a>
-                  <a class="dropdown-item" href="#" style="font-size: 20px;">Event Ticketing</a>
-                  <a class="dropdown-item" href="#" style="font-size: 20px;">Code Redemption</a>
+                 <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Web Store</a>
+                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Event Ticketing</a>
+                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Code Redemption</a>
                 </div>
               </li>
           </ul>
