--- a/project/aboutpage.html
+++ b/project/aboutpage.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+ <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <a class="navbar-brand mx-4" href="index.html">
             <img src="assets/pokemon-go-seeklogo.png" width="150" height="90" alt="pokemon-go-logo">
         </a>
@@ -38,9 +38,6 @@
             <li class="nav-item active">
               <a class="nav-link mx-4" href="news.html" style="font-size: 30px;">News<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link mx-4" href="seasons.html" style="font-size: 30px;">Seasons<span class="sr-only">(current)</span></a>
-              </li>
               <li class="nav-item active">
                 <a class="nav-link mx-4" href="events.html" style="font-size: 30px;">Events<span class="sr-only">(current)</span></a>
               </li>
@@ -48,28 +45,18 @@
                 <a class="nav-link mx-4" href="community.html" style="font-size: 30px;">Community<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link mx-4" href="aboutpage.html" style="font-size: 30px;">About Us<span class="sr-only">(current)</span></a>
+               <a class="nav-link mx-4" href="aboutpage.html" style="font-size: 30px;">About Us<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white"  href="#" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 30px;">
-                Shop
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownShop">
-                 <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Web Store</a>
-                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Event Ticketing</a>
-                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Code Redemption</a>
-                </div>
+              <li class="nav-item active">
+                <a class="nav-link mx 4"  href="shop.html" style="font-size: 30px;">Shop<span class="sr-only"></span></a>
               </li>
           </ul>
         </div>
-    
        <form action="form-inline"> 
         <a class="btn btn-outline-primary btn-lg my-2 my-sm-0" href="login-page.html">Sign In</a>
        </form>
       
       </nav>
-      </div>
-
       <section>
         <div class="img-fluid w-100 h-10">
             <img src="assets/1140437.jpg" alt="test" class="team-rocket img-fluid">
