--- a/project/index.html
+++ b/project/index.html
@@ -38,9 +38,6 @@
             <li class="nav-item active">
               <a class="nav-link mx-4" href="news.html" style="font-size: 30px;">News<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link mx-4" href="seasons.html" style="font-size: 30px;">Seasons<span class="sr-only">(current)</span></a>
-              </li>
               <li class="nav-item active">
                 <a class="nav-link mx-4" href="events.html" style="font-size: 30px;">Events<span class="sr-only">(current)</span></a>
               </li>
@@ -50,15 +47,8 @@
               <li class="nav-item active">
                <a class="nav-link mx-4" href="aboutpage.html" style="font-size: 30px;">About Us<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white"  href="#" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 30px;">
-                Shop
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownShop">
-                 <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Web Store</a>
-                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Event Ticketing</a>
-                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Code Redemption</a>
-                </div>
+                <li class="nav-item active">
+                <a class="nav-link mx 4"  href="shop.html" style="font-size: 30px;">Shop<span class="sr-only"></span></a>
               </li>
           </ul>
         </div>
@@ -161,7 +151,7 @@ background: linear-gradient(90deg,rgba(116, 164, 227, 1) 37%, rgba(37, 106, 196,
 
       <section>
         <div class="position-relative" style="width: 100%;" >
-          <img src="assets/1156013.jpg"  class="img-fluid w-100 h-10" alt="pokemonn" style="filter: blur(6px)" >
+          <img src="assets/1156013.jpg"  class="img-fluid w-100 h-10 image1" alt="pokemonn"  >
           <img src="assets/81109.png"  class="items-overlay" alt = "items">
           <img src="assets/poke-ball.png" alt="poke-ball" class="poke-ball-overlay" class="img-fluid">
           <img src="assets/Evolution Items_0.png" alt="evolution" class="evolution-overlay">
