--- a/project/shop.html
+++ b/project/shop.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tungsten:wght@700&family=DINNextW05-Medium&display=swap">
-    <link rel="stylesheet" href="indexstyle.css">
+    <link rel="stylesheet" href="shop.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+   <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <a class="navbar-brand mx-4" href="index.html">
             <img src="assets/pokemon-go-seeklogo.png" width="150" height="90" alt="pokemon-go-logo">
         </a>
@@ -37,9 +37,6 @@
             <li class="nav-item active">
               <a class="nav-link mx-4" href="news.html" style="font-size: 30px;">News<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link mx-4" href="seasons.html" style="font-size: 30px;">Seasons<span class="sr-only">(current)</span></a>
-              </li>
               <li class="nav-item active">
                 <a class="nav-link mx-4" href="events.html" style="font-size: 30px;">Events<span class="sr-only">(current)</span></a>
               </li>
@@ -47,17 +44,10 @@
                 <a class="nav-link mx-4" href="community.html" style="font-size: 30px;">Community<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link mx-4" href="aboutpage.html" style="font-size: 30px;">About Us<span class="sr-only">(current)</span></a>
+               <a class="nav-link mx-4" href="aboutpage.html" style="font-size: 30px;">About Us<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white"  href="#" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 30px;">
-                Shop
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownShop">
-                 <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Web Store</a>
-                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Event Ticketing</a>
-                  <a class="dropdown-item" href="shop.html" style="font-size: 20px;">Code Redemption</a>
-                </div>
+               <li class="nav-item active">
+                <a class="nav-link mx 4"  href="shop.html" style="font-size: 30px;">Shop<span class="sr-only"></span></a>
               </li>
           </ul>
         </div>
@@ -68,9 +58,10 @@
       </nav>
     
       <section>
-        <div>
-
+        <div class="container-fluid">
+          <h1 class="container text-center text1"> Products and Services</h1>
         </div>
+        <div class="container-fluid"></div>
       </section>
       
       <footer class="bg-body-tertiary text-center text-lg-start">
